test_suite/ui/not_enum.stderr
error: #[bitflags] requires an enum
 --> $DIR/not_enum.rs:3:1
  |
3 | struct Foo(u16);
  | ^^^^^^
