test_suite/ui/not_enum.rs
#[enumflags2::bitflags]
#[derive(Copy, Clone)]
struct Foo(u16);

fn main() {}
